--- a/faculty_logged_in/ivform.css
+++ b/faculty_logged_in/ivform.css
@@ -27,3 +27,7 @@
 	margin-top: 20px;
 	transform: scale(2.5);
 }
+
+table > thead > tr > th, table > tbody > tr > th, table > tfoot > tr > th, table > thead > tr > td, table > tbody > tr > td, table > tfoot > tr > td {
+    border: 0px solid #dddddd;
+}
