--- a/index_files/style.css
+++ b/index_files/style.css
@@ -58,6 +58,22 @@ p {
 h4 {
 	font-size: 16px;
 }
+
+
+.book_button{
+
+    border: 1px solid #000000;
+    color: #000000;
+
+}
+
+.book_button:hover{
+
+    border: 1px solid #ff00ff;
+    color: #000000;
+
+}
+
 /*--------------------------------------------------------------
 # Tables
 --------------------------------------------------------------*/
