--- a/management_logged_in/industrial_visit.css
+++ b/management_logged_in/industrial_visit.css
@@ -1,22 +1,17 @@
 .book_button{
-	-webkit-appearance: button;
-    cursor: pointer;
-    font-size: 14px;
-    padding: 12px 30px;
-    border: 1px solid #fcd088;
-    color: #fcd088;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    background-color: transparent;
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
-    margin: 0;
-    vertical-align: baseline;
-    line-height: inherit;
-    font: inherit;
-    box-sizing: border-box;
+
+    border: 1px solid #000000;
+    color: #000000;
 
 }
+
+.book_button:hover{
+
+    border: 1px solid #ff00ff;
+    color: #000000;
+
+}
+
 
 
 .titlec{
